--- a/index.html
+++ b/index.html
@@ -1,175 +1,98 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>خبير - توازن الماء</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      direction: rtl;
-      background: #FFFFFF; /* خلفية بيضاء */
-      color: #333333; /* نص بلون داكن */
-      text-align: center;
-      padding: 20px;
-    }
-    .container {
-      background: #F4F4F4; /* خلفية فاتحة للصندوق */
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1), -5px -5px 15px rgba(255, 255, 255, 0.05);
-      max-width: 600px;
-      margin: auto;
-      display: none; /* إخفاء جميع الصفحات عند البداية */
-    }
-    .active {
-      display: block; /* الصفحة النشطة فقط تظهر */
-    }
-    .header {
-      font-size: 3.5em;
-      font-weight: 700;
-      color: #FF66B2; /* وردي فاتح */
-      margin-bottom: 20px;
-    }
-    .button {
-      display: block;
-      width: 100%;
-      padding: 15px;
-      font-size: 1.5em;
-      font-weight: bold;
-      margin: 15px 0;
-      border: none;
-      border-radius: 10px;
-      background: #FF66B2; /* وردي فاتح */
-      color: #1E1E1E;
-      cursor: pointer;
-      box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4), -3px -3px 8px rgba(255, 255, 255, 0.05);
-    }
-    .button:hover {
-      background: #FF3385; /* وردي أغمق عند التمرير */
-    }
-    label {
-      font-size: 1.3em;
-      color: #FF66B2; /* وردي فاتح */
-      display: block;
-      margin-top: 15px;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-top: 8px;
-      font-size: 1.3em;
-      border: none;
-      border-radius: 10px;
-      text-align: center;
-      background: #EEEEEE; /* خلفية فاتحة للحقل */
-      color: #FF66B2; /* وردي فاتح */
-      box-shadow: inset 3px 3px 8px rgba(0, 0, 0, 0.1), inset -3px -3px 8px rgba(255, 255, 255, 0.05);
-    }
-    .result {
-      margin-top: 20px;
-      font-size: 1.8em;
-      font-weight: bold;
-      color: #FF66B2; /* وردي فاتح */
-      background: #EEEEEE; /* خلفية فاتحة للناتج */
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: inset 3px 3px 8px rgba(0, 0, 0, 0.1), inset -3px -3px 8px rgba(255, 255, 255, 0.05);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>خبير - حاسبة قطرات المغنيسيوم والصوديوم</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff; /* خلفية بيضاء */
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+        .expert-name {
+            font-size: 30px;
+            font-weight: bold;
+            color: #d6336c; /* اللون الوردي الفاتح */
+            margin-bottom: 20px;
+        }
+        input[type="range"] {
+            width: 80%;
+            margin: 10px 0;
+            background-color: #f8d7da; /* اللون الوردي الفاتح */
+            border: 1px solid #d6336c;
+            border-radius: 5px;
+        }
+        input[type="number"] {
+            width: 60px;
+            text-align: center;
+            padding: 5px;
+        }
+        .result {
+            margin-top: 20px;
+            background-color: #f8d7da; /* اللون الوردي الفاتح */
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .slider-container {
+            margin: 15px 0;
+        }
+    </style>
 </head>
 <body>
+    <div class="expert-name">خبير</div>
 
-  <!-- الصفحة الرئيسية -->
-  <div class="container active" id="mainMenu">
-    <div class="header">خبير - توازن الماء</div>
-    <button class="button" onclick="showPage('minerals')">🔬 صنع وصفات باستخدام المعادن</button>
-    <button class="button" onclick="showPage('gh_kh')">⚖ صنع وصفات عن طريق GH و KH</button>
-  </div>
+    <div class="slider-container">
+        <label for="liters">عدد لترات الماء: <span id="litersValue">1</span> لتر</label><br>
+        <input type="range" id="liters" min="1" max="100" value="1" step="1" oninput="updateValues()">
+    </div>
 
-  <!-- صفحة المعادن (حساب المعادن عبر إدخال المغنيسيوم والصوديوم) -->
-  <div class="container" id="minerals">
-    <div class="header">صنع وصفات باستخدام المعادن</div>
+    <div class="slider-container">
+        <label for="magnesiumTDS">مستوى TDS المطلوب للمغنيسيوم: <span id="magnesiumTDSValue">0</span></label><br>
+        <input type="range" id="magnesiumTDS" min="0" max="100" value="0" step="1" oninput="updateValues()">
+    </div>
 
-    <label for="mg">أدخل كمية MgSO₄ (المغنيسيوم) بالجرام:</label>
-    <input type="number" id="mg" step="0.01" oninput="calculateMinerals()">
+    <div class="slider-container">
+        <label for="sodiumTDS">مستوى TDS المطلوب للصوديوم: <span id="sodiumTDSValue">0</span></label><br>
+        <input type="range" id="sodiumTDS" min="0" max="100" value="0" step="1" oninput="updateValues()">
+    </div>
 
-    <label for="na">أدخل كمية NaHCO₃ (الصوديوم) بالجرام:</label>
-    <input type="number" id="na" step="0.01" oninput="calculateMinerals()">
+    <div class="result">
+        <h2>النتيجة:</h2>
+        <p id="result">---</p>
+    </div>
 
-    <label for="liters">عدد اللترات:</label>
-    <input type="number" id="liters" min="0.5" step="0.1" value="1" oninput="calculateMinerals()">
+    <script>
+        function updateValues() {
+            const liters = parseFloat(document.getElementById('liters').value);
+            const magnesiumTDS = parseFloat(document.getElementById('magnesiumTDS').value);
+            const sodiumTDS = parseFloat(document.getElementById('sodiumTDS').value);
 
-    <div class="result" id="resultsMinerals">أدخل القيم لحساب ناتج GH و KH.</div>
+            // تحديث النصوص في الشريط
+            document.getElementById('litersValue').innerText = liters;
+            document.getElementById('magnesiumTDSValue').innerText = magnesiumTDS;
+            document.getElementById('sodiumTDSValue').innerText = sodiumTDS;
 
-    <button class="button" onclick="goHome()">🔙 العودة للقائمة</button>
-  </div>
+            // حساب عدد القطرات المطلوبة بناءً على 3 قطرات لكل 10 TDS
+            const magnesiumDrops = (magnesiumTDS / 10) * 3 * liters;  // عدد القطرات للمغنيسيوم
+            const sodiumDrops = (sodiumTDS / 10) * 3 * liters;        // عدد القطرات للصوديوم
 
-  <!-- صفحة GH/KH (حسابات GH و KH مع خانة اللترات) -->
-  <div class="container" id="gh_kh">
-    <div class="header">صنع وصفات عن طريق GH و KH</div>
+            // حساب عدد المل لكل قطرة
+            const millilitersPerDrop = 0.05; // 0.05 مل لكل قطرة
+            const totalMagnesiumMilliliters = magnesiumDrops * millilitersPerDrop;
+            const totalSodiumMilliliters = sodiumDrops * millilitersPerDrop;
 
-    <label for="gh_value">حدد GH المطلوب:</label>
-    <input type="number" id="gh_value" step="1" oninput="calculateGH_KH()">
+            // عرض النتيجة
+            document.getElementById('result').innerHTML = `
+                عدد قطرات المغنيسيوم: ${magnesiumDrops.toFixed(2)} قطرات (مجموع المل: ${totalMagnesiumMilliliters.toFixed(2)} مل)<br>
+                عدد قطرات الصوديوم: ${sodiumDrops.toFixed(2)} قطرات (مجموع المل: ${totalSodiumMilliliters.toFixed(2)} مل)
+            `;
+        }
 
-    <label for="kh_value">حدد KH المطلوب:</label>
-    <input type="number" id="kh_value" step="1" oninput="calculateGH_KH()">
-
-    <label for="liters_ghkh">عدد اللترات:</label>
-    <input type="number" id="liters_ghkh" min="0.5" step="0.1" value="1" oninput="calculateGH_KH()">
-
-    <div class="result" id="resultsGH_KH">أدخل القيم لحساب المعادن.</div><button class="button" onclick="goHome()">🔙 العودة للقائمة</button>
-</div>
-
-<script>
-  // إظهار الصفحة المطلوبة
-  function showPage(page) {
-    document.querySelectorAll(".container").forEach(el => el.classList.remove("active"));
-    document.getElementById(page).classList.add("active");
-  }
-
-  // العودة للقائمة الرئيسية
-  function goHome() {
-    showPage("mainMenu");
-  }
-
-  // حساب GH وKH بناءً على المغنيسيوم (MgSO₄) والصوديوم (NaHCO₃) وعدد اللترات
-  function calculateMinerals() {
-    let mg = parseFloat(document.getElementById("mg").value) || 0;
-    let na = parseFloat(document.getElementById("na").value) || 0;
-    let liters = parseFloat(document.getElementById("liters").value) || 1;
-
-    // الصيغ العكسية:
-    // GH = (MgSO₄ (غرام) × (98.7 ÷ 0.243)) ÷ عدد اللترات
-    // KH = (NaHCO₃ (غرام) × (20.3 ÷ 0.034)) ÷ عدد اللترات
-    let ghResult = (mg * (98.7 / 0.243)) / liters;
-    let khResult = (na * (20.3 / 0.034)) / liters;
-
-    document.getElementById("resultsMinerals").innerHTML = `
-      <p><strong>GH (العسر العام):</strong> ${ghResult.toFixed(1)}</p>
-      <p><strong>KH (القلوية):</strong> ${khResult.toFixed(1)}</p>
-    `;
-  }
-
-  // حساب المعادن بناءً على GH و KH وعدد اللترات
-  function calculateGH_KH() {
-    let gh = parseFloat(document.getElementById("gh_value").value) || 0;
-    let kh = parseFloat(document.getElementById("kh_value").value) || 0;
-    let liters = parseFloat(document.getElementById("liters_ghkh").value) || 1;
-
-    // الصيغ العكسية:
-    // MgSO₄ = (GH × 0.243) ÷ 98.7 × عدد اللترات
-    // NaHCO₃ = (KH × 0.034) ÷ 20.3 × عدد اللترات
-    let mgResult = (gh * 0.243) / 98.7 * liters;
-    let naResult = (kh * 0.034) / 20.3 * liters;
-
-    document.getElementById("resultsGH_KH").innerHTML = `
-      <p><strong>MgSO₄ (المغنيسيوم):</strong> ${mgResult.toFixed(2)} غرام</p>
-      <p><strong>NaHCO₃ (الصوديوم):</strong> ${naResult.toFixed(2)} غرام</p>
-    `;
-  }
-</script>
-
+        // تحديث القيم تلقائيًا عند التحميل
+        window.onload = updateValues;
+    </script>
 </body>
 </html>
